<resources>
    <string name="app_name">やらなきゃ</string>
    <string name="action_add">ToDo Add</string>
    <string name="action_ReadMe">ReadMe</string>
    <string name="title_activity_new_task">NewTaskAct</string>

    <string name="task_add">Add</string>
    <string name="task_overview">概要</string>
    <string name="task_name">名前</string>
    <string name="task_contents">内容</string>
    <string name="task_priority">優先度</string>
    <string name="checkbox_absolute">ぜったい</string>
    <string name="checkbox_normal">まあやる</string>
    <string name="checkbox_donot">やりたくない</string>
    <string name="task_when">いつまで</string>
    <string name="checkbox_date">設定する</string>
    <string name="task_remarks">備考</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginAct</string>
</resources>
