<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewTaskAct"
    tools:showIn="@layout/activity_new_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_overview" />

                <EditText
                    android:id="@+id/taskname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/task_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/taskcontents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/task_contents"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_priority" />

                <CheckBox
                    android:id="@+id/absolutetask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_absolute" />

                <CheckBox
                    android:id="@+id/normaltask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_normal" />

                <CheckBox
                    android:id="@+id/donottask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_donot" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_when" />

                <CheckBox
                    android:id="@+id/setdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_date" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_remarks" />

                <EditText
                    android:id="@+id/taskremarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>